corrections bouton facebook alignement inscription et couleur navbar sur mobile

--- a/app/assets/stylesheets/signup-login.css.scss
+++ b/app/assets/stylesheets/signup-login.css.scss
@@ -43,7 +43,7 @@ padding-bottom: 20px;
 }
 
 .icon-alignement {
-  margin-right: 10px;
+  margin-right: 45px;
   vertical-align: bottom;
 }
 
